
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Accept null options in modHashing->__construct()
- [#4607], [#3463] Add rank field for contexts to allow custom sorting in tree, fix issues with context/resource dragging and dropping and ensure context name validation rules are consistent
- Improve UI of User's groups to allow for assigning ranks to User Groups for a User
- Add Custom Dashboards and Dashboard Widgets
- [#4871] Fix Access Permissions not being copied when duplicating a context
- [#4382] Forgot Manager Password now lookups using username to prevent issues when the 'allow_multiple_emails' system setting is enabled
- Fix rendering of combo boxes in element properties
- Add ability to select Primary User Group for User
- [#4637] Fix RTE checkbox not saving correctly when using Quick Create Resource
- [#5268] Add search toolbar for Resource tree
- [#4080] Add Content Type and Content Disposition to Quick Create/Update Resource
- [#5250] Add check for cURL in Package Management
- [#5204] Add search by parent to mgr search page
- Added much better handling for custom resource classes; deprecated custom_resource_classes setting
- [#4601] Ensure children of protected Resources inherit by default their parent's Resource Groups in create UI
- [#4016] Update description text in grid when adding/updating element properties without need for page reload
- [#2860] Fix 'Sent On' date when viewing an expanded message
- [#4984] Ensure tree highlighting of currently edited resource/element/file works consistently
- [#2638] When updating an element's category, ensure old treenode is removed
- [#5139] Fix issues with MODx.Browser and file/image TVs in other contexts
- [#4958] Add IDs to Resource Groups in RG tree
- Add ability to rename Resource Groups
- [#5185] Improve core package already extracted validation for upgrades